# Physical-AI-Humanoid-Robotics-Future-RAG-ChatBot-phase2

./: .gitignore  CHATWIDGET_USAGE_INSTRUCTIONS.md  CONCLUSION.md  FIX_SUMMARY.md  INTEGRATION_INSTRUCTIONS.md  QDRANT_FINAL_SUMMARY.md  QDRANT_TESTING_SUMMARY.md  README.md  REAL_SOLUTION.md  SOLUTION_SUMMARY.md  docker-compose.qdrant.yml  docusaurus.config.js  frontend_plan.md  package-lock.json  package.json  plan.md  qdrant_compatible_testing_script.py  qdrant_robust_testing_script.py  qdrant_status_check.py  qdrant_testing_script.py  sidebars.js  spec.md  system-diagram-description.md  tasks-phase2.md  tasks.md  test_cohere_response.py  test_ingest_docs.py  test_qdrant.py  test_simple_ingestion.py
backend/: .env.example  ENHANCED_RAG_INSTRUCTIONS.md  FINAL_RAG_INSTRUCTIONS.md  GEMINI_RAG_INSTRUCTIONS.md  HEALTH_ENDPOINT_INSTRUCTIONS.md  NEON_SERVICE_TEST_RESULTS.md  QDRANT_SERVICE_TESTING.md  RAG_SYSTEM_TESTING_SUMMARY.md  README.md  plan.md  pyproject.toml  requirements.txt  tasks_phase3.md  test_api_endpoints.py  test_complete_system.py  test_comprehensive.py  test_db_connections.py  test_embedding_service.py  test_embedding_service_simple.py  test_enhanced_rag.py  test_gemini_integration.py  test_ingestion_script.py  test_neon_service.py  test_neon_service_comprehensive.py  test_neon_service_integration.py  test_neon_service_validation.py  test_qdrant_comprehensive.py  test_qdrant_service.py  test_qdrant_unit.py  test_rag.py  test_rag_backend.py  test_rag_service.py  test_rag_structure.py  validate_rag_system.py  validate_rag_system_v2.py
backend/app/: main.py
(+154 files in other folders)
